Assorted bugfixes, project view on mobile

--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -57,16 +57,19 @@
 		width: 100%;
 		height: auto;
 		padding: 0;
+		padding-top: 90px;
 		margin: 0;
 		position: fixed;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
-		display: flex;
-		flex-direction: column;
+		display: block;
+		flex-direction: unset;
+		flex-wrap: unset;
 		z-index: 1;
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 
 		article {
 			background-color: $white;
@@ -78,7 +81,7 @@
 		}
 
 		.project__button {
-			position: absolute;
+			position: fixed;
 			right: -55px;
 			top: -20px;
 			width: 150px;
